# SJTU-CS241

./: README.md
FLTK1/: CMakeLists.txt  README.md
FLTK1/1/: CMakeLists.txt  hyperelliptic.cpp  hyperelliptic.h  main1.cpp
FLTK1/2/: CMakeLists.txt  main2.cpp  righttriangle.cpp  righttriangle.h
FLTK1/3/: Binary_tree.cpp  Binary_tree.h  CMakeLists.txt  TriangleBinary_tree.cpp  TriangleBinary_tree.h  main3.cpp
FLTK2/1/: BarChart.cpp  BarChart.h  CMakeLists.txt  main1.cpp
FLTK2/2/: AnalogClock.cpp  AnalogClock.h  CMakeLists.txt  Simple_window.cpp  Simple_window.h  main2.cpp
FLTK2/revised-gui/: Graph.cpp
hw1/: Polynomial  Polynomial.cpp  Polynomial.h  README.md  a.out  exercise_2  exercise_2.cpp
hw2/: LinearEquations  LinearEquations.cpp  LinearEquations.h  Polynomial.cpp  Polynomial.h  README.md  a.out  exercise_3  exercise_3.cpp  tasks
hw3/: Interpolation.h  exercise_4  exercise_4.cpp
hw4/: a.out  exercise_8  exercise_8.cpp  test.cpp  test.txt
hw5/: exercise_9  exercise_9.cpp
hw6/: NodeRecognition  NodeRecognition.cpp  NodeRecognition.h  README.md  TreeConstruct.cpp  TreeConstruct.h  a.out  exercise_10  exercise_10.cpp
proj/: helper.h  main.cpp
